# ContoBancario

./: CMakeLists.txt  Conto.cpp  Conto.h  Interfaccia.cpp  Interfaccia.h  Transazione.cpp  Transazione.h  Utente.cpp  Utente.h  main.cpp
test/googletest1.14.0/: README.md
test/googletest1.14.0/docs/: gmock_cheat_sheet.md  gmock_cook_book.md  primer.md
test/googletest1.14.0/docs/reference/: assertions.md  matchers.md
test/googletest1.14.0/googlemock/include/gmock/: gmock-actions.h  gmock-matchers.h
test/googletest1.14.0/googlemock/src/: gmock-internal-utils.cc  gmock-spec-builders.cc
test/googletest1.14.0/googlemock/test/: gmock-actions_test.cc  gmock-cardinalities_test.cc  gmock-function-mocker_test.cc  gmock-internal-utils_test.cc  gmock-matchers-arithmetic_test.cc  gmock-matchers-comparisons_test.cc  gmock-matchers-containers_test.cc  gmock-matchers-misc_test.cc  gmock-matchers_test.h  gmock-more-actions_test.cc  gmock-nice-strict_test.cc  gmock-spec-builders_test.cc  gmock_ex_test.cc  gmock_leak_test_.cc  gmock_link_test.h  gmock_output_test_.cc
test/googletest1.14.0/googletest/: README.md
test/googletest1.14.0/googletest/include/gtest/: gtest-death-test.h  gtest-matchers.h  gtest-message.h  gtest.h  (+1 more)
test/googletest1.14.0/googletest/src/: gtest-death-test.cc  gtest-filepath.cc  gtest-internal-inl.h  gtest-port.cc  gtest-printers.cc  gtest.cc
test/googletest1.14.0/googletest/test/: googletest-death-test-test.cc  googletest-options-test.cc  googletest-port-test.cc  googletest-printers-test.cc  gtest_unittest.cc
tests/: testConto.cpp  testUtente.cpp
(+4 files in other folders)
